# GraphRAG-mcp

./: .gitignore  Cargo.toml  README.md  check_db.py  check_deps.py  dump_board.py  go.mod  go.sum  kill_zombie.sh  main.go  main_test.go  test_db.rs
configs/: default.yaml
dashboard/: eslint.config.js  package-lock.json  package.json  vite.config.ts
dashboard/playwright-report/: index.html
dashboard/src/: App.test.tsx  App.tsx  index.css  setupTests.tsx
dashboard/tests/e2e/: dashboard.spec.ts
data/: graph.db
internal/config/: config.go  config_test.go
internal/embedding/: harrier.go  harrier_test.go  tokenizer.go  tokenizer_test.go
internal/graph/: leiden.go  leiden_test.go
internal/indexer/: chunker.go  chunker_test.go  parser.go  parser_test.go  pipeline.go  scanner.go  scanner_test.go
internal/indexer/extractors/: base.go  golang.go  golang_test.go  javascript.go  javascript_test.go  python.go  python_test.go
internal/mcp/: handler.go  handler_test.go  tools.go
internal/search/: global.go  global_test.go  local.go  local_test.go  neighbors.go  neighbors_test.go
internal/storage/: database.go  database_test.go  fts.go  graph.go  vector.go
npm/: package-lock.json  package.json
src/: config.rs  downloader.rs  lib.rs  main.rs  web.rs
src/embedding/: harrier.rs  mod.rs  tokenizer.rs
src/graph/: leiden.rs  mod.rs
src/indexer/: mod.rs  pipeline.rs  scanner.rs
src/indexer/extractors/: base.rs  c_sharp.rs  cpp.rs  golang.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs
src/mcp/: mod.rs
src/search/: mod.rs
src/storage/: database.rs
tests/: download_model.py  e2e_test.py  integration_test.rs
