[package]
name = "graphrag_mcp"
version = "0.1.0"
edition = "2021"
description = "GraphRAG MCP Server implemented in Rust"

[dependencies]
# Async & Networking
tokio = { version = "1.37", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled", "load_extension", "functions"] }

tiktoken-rs = "0.5.8"

# AST Parsing (Tree-sitter)
tree-sitter = "0.21"
tree-sitter-go = "0.21.2"
tree-sitter-javascript = "0.21.4"
tree-sitter-python = "0.21.0"
tree-sitter-rust = "0.21.2"
tree-sitter-typescript = "0.21.2"
tree-sitter-c = "0.21.4"
tree-sitter-cpp = "0.21.0"
tree-sitter-java = "0.21.0"

# Scanner and Concurrency
walkdir = "2.5"
ignore = "0.4"

# Algorithms
petgraph = "0.6"

# Error Handling & Logs
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenv = "0.15"
tree-sitter-c-sharp = "0.21"
tree-sitter-ruby = "0.21"
sqlite-vec = "0.1.1"
ort = "2.0.0-rc.12"
# tree-sitter-scala = "0.21"
# tree-sitter-php = "0.21"
# tree-sitter-swift = "0.5.0"
# tree-sitter-kotlin = "0.3.6"
